# rgbd_mapping_and_relocalisation

./: .gitignore  .gitignore_global  CMakeLists.txt  Licenses.txt  README.md  environment.txt
cmake/: UseGLEW.cmake  UseOpenNI.cmake  UseQGLViewer.cmake
common/: CVUtil.hpp  Converters.hpp  DllExportDef.h  EigenUtil.hpp  OtherUtil.hpp  Utility.hpp
data/: XtionIR.yml  xtion_intrinsics.yml
data/1406120314/: RegularLocations.yml
data/1410220017/: RegularLocations.yml
data/1410220303/: RegularLocations.yml
data/1501160828/: RegularLocations.yml
external_libraries/: CMakeLists.txt
external_libraries/nifticlib/: CMakeLists.txt
external_libraries/nifticlib/niftilib/: CMakeLists.txt
external_libraries/nifticlib/znzlib/: CMakeLists.txt
external_libraries/zlib/: CMakeLists.txt
mapping_and_relocalisation/: CMakeLists.txt  Data4Viewer.cpp  Data4Viewer.h  DataLive.cpp  DataLive.h  Main.cpp  MappingAndRelocalisationControl.yml  MappingAndRelocalisationControlUbuntu.yml  MultiViewer.cpp  MultiViewer.h
rgbd/: CMakeLists.txt  Camera.cpp  Camera.h  CubicGrids.cpp  CubicGrids.h  CudaLib.cu  CudaLib.cuh  FeatureVolume.cu  FeatureVolume.cuh  GLUtil.cpp  GLUtil.hpp  ICPFrame2Frame.cu  ICPFrame2Frame.cuh  Kinect.h  KinfuTracker.cpp  KinfuTracker.cu  KinfuTracker.cuh  KinfuTracker.h  MarchingCubes.cu  MarchingCubes.cuh  Normal.cu  Normal.cuh  RGBDFrame.cpp  RGBDFrame.h  RayCaster.cu  RayCaster.cuh  VideoSourceKinect.cpp  VideoSourceKinect.hpp  Volume.cu  Volume.cuh
rgbd/pcl/: device.hpp  internal.h  vector_math.hpp
